feat(coupon): add coupon logic & refactor swagger (#87)